can now add descriptions

--- a/app/views/records/_editform.html.erb
+++ b/app/views/records/_editform.html.erb
@@ -13,7 +13,9 @@
 
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title, placeholder: "enter a title" %>
+    <%= f.text_field :title, placeholder: "enter a title" %><br>
+    <%= f.label :description %>
+    <%= f.text_field :description, placeholder: "summarise the day" %>
   </div>
 
   <div class="actions">
