gratitude field added

--- a/app/views/records/_editform.html.erb
+++ b/app/views/records/_editform.html.erb
@@ -15,7 +15,9 @@
     <%= f.label :title %>
     <%= f.text_field :title, placeholder: "enter a title" %><br>
     <%= f.label :description %>
-    <%= f.text_field :description, placeholder: "summarise the day" %>
+    <%= f.text_field :description, placeholder: "summarise the day" %><br>
+    <%= f.label :gratitude %>
+    <%= f.text_field :gratitude, placeholder: "what should you be grateful for today?" %>
   </div>
 
   <div class="actions">
