--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title, placeholder: "enter a title" %>
+    <%= f.text_field :title, placeholder: "the date e.g. 01/06/17" %>
   </div>
 
   <div class="actions">
